kubernetes/authentification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentification-service
spec:
  selector:
    matchLabels:
      app: authentification-service
  template:
    metadata:
      labels:
        app: authentification-service
    spec:
      containers:
        - name: authentification-service
          image: nelahio/authentification-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: authentification-clusterip
spec:
  selector:
    app: authentification-service
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authentification-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: authentification-service
  ports:
    - port: 80
      targetPort: 80
