kubernetes/enchere-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enchere-service
spec:
  selector:
    matchLabels:
      app: enchere-service
  template:
    metadata:
      labels:
        app: enchere-service
    spec:
      containers:
        - name: enchere-service
          image: nelahio/enchere-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: enchere-clusterip
spec:
  type: ClusterIP
  selector:
    app: enchere-service
  ports:
    - port: 80
      targetPort: 80
      name: web
    - port: 7777
      targetPort: 7777
      name: grpc
