kubernetes/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: nelahio/gateway-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusterip
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 80
