kubernetes/nginx-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
spec:
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
        - name: nginx-proxy
          image: nginxproxy/nginx-proxy
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - name: docker-sock
              mountPath: /tmp/docker.sock
              readOnly: true
            - name: certs
              mountPath: /etc/nginx/certs
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: certs
          hostPath:
            path: /etc/nginx/certs:ro
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  type: NodePort
  selector:
    app: nginx-proxy
  ports:
    - name: http
      port: 80
      nodePort: 30080
    - name: https
      port: 443
      nodePort: 30443
