kubernetes/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: nelahio/notification-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: notification-clusterip
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 80
