kubernetes/offre-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offre-service
spec:
  selector:
    matchLabels:
      app: offre-service
  template:
    metadata:
      labels:
        app: offre-service
    spec:
      containers:
        - name: offre-service
          image: nelahio/offre-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: offre-clusterip
spec:
  type: ClusterIP
  selector:
    app: offre-service
  ports:
    - port: 80
      targetPort: 80
