kubernetes/recherche-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recherche-service
spec:
  selector:
    matchLabels:
      app: recherche-service
  template:
    metadata:
      labels:
        app: recherche-service
    spec:
      containers:
        - name: recherche-service
          image: nelahio/recherche-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: recherche-clusterip
spec:
  type: ClusterIP
  selector:
    app: recherche-service
  ports:
    - port: 80
      targetPort: 80
