kubernetes/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.cube.com
        - api.cube.com
        - auth.cube.com
      secretName: cube-app-tls
  rules:
    - host: app.cube.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.cube.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: auth.cube.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: authentification-clusterip
                port:
                  number: 80
